<resources>
    <string name="app_name">Woi Tools</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="choose">Choose</string>

    <string name="select_dpi">Select preferred DPI</string>
    <string name="clone_init_folder">Clone Init.d Folder</string>
    <string name="destination_directory">Destination Directory</string>
    <string name="choose_destination_path">Touch to choose a destination path</string>
    <string name="flash_tools">Flash Tools</string>
    <string name="archive_manager">Archive Manager</string>
    <string name="settings">Settings</string>
    <string name="add_new_archive_item">New Archive</string>
    <string name="remove">Remove</string>
    <string name="archive_name_hint">Enter an archive name</string>
    <string name="choose_source_path">Click to choose the Source Path</string>
    <string name="files">Files</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">delete</string>
    <string name="delete_archive">Delete Archive</string>
    <string name="confirmation_delete">Are you sure you want to permenantly delete this archive?</string>
    <string name="cancel">Cancel</string>
    <string name="confirmation_archive">Are you sure you want to archive the files now? Please make sure the destination storage is mounted.</string>
    <string name="archive_now">Archive Now</string>
    <string name="include_subfolders">Include Sub-folders</string>
    <string name="validation_archive_name">Please enter an unique name to represent this archive.</string>
    <string name="validation_archive_source_path">Please select the source path.</string>
    <string name="validation_number_required">Please enter a number.</string>
    <string name="validation_number_invalid">Please enter a valid number.</string>
    <string name="validation_duplicated_source_path">Selected source path already has an archive using it.</string>
</resources>
